--- a/volcano_plot/html_data/index.html
+++ b/volcano_plot/html_data/index.html
@@ -6,12 +6,41 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <script src="index.js"></script>
 </head>
 <body>
-<button id="resetBtn">Reset</button>
 
-<div id="chart">
+<div class="container">
+
+<div class="row">&nbsp;</div>
+
+<div class="row">
+<div class="col-sm">
+ <div class="input-group mb-3">
+   <div class="input-group-prepend">
+     <span class="input-group-text">FDR threshold: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+   </div>
+   <input type="text" class="form-control"  aria-label="fdrthreshold" id="fdrthreshold" value="0.05">
+ </div>
+
+ <div class="input-group mb-3">
+   <div class="input-group-prepend">
+     <span class="input-group-text">Fold-change threshold:</span>
+   </div>
+   <input type="text" class="form-control"  aria-label="foldchange" id="foldchange" value="1">
+ </div>
+
+
+<button type="button" class="btn btn-outline-primary" id="apply">apply thresholds</button>
+
+</div>
+<div  class="col-sm">&nbsp; </div>
+</div>
+
+<div class="row">
+<div id="chart"></div>
 
 </div>
 
