--- a/volcano_plot/html_data/index.html
+++ b/volcano_plot/html_data/index.html
@@ -1,86 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Zoomable Volcano Plot with Tooltips in D3 v4</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <script src="index.js"></script>
 </head>
+
 <body>
 
-<div class="container">
+    <div class="container">
 
-<div class="row">&nbsp;</div>
+        <div class="row">&nbsp;</div>
 
-<div class="row">
-<div class="col-sm">
- <div class="input-group mb-3">
-   <div class="input-group-prepend">
-     <span class="input-group-text">FDR threshold: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-   </div>
-   <input type="text" class="form-control"  aria-label="fdrthreshold" id="fdrthreshold" value="0.05">
- </div>
+        <div class="row">
+            <div class="col-sm">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Plot Title:</span>
+                    </div>
+                    <input type="text" class="form-control" aria-label="plottitle" id="plottitle" value="Title">
+                </div>
 
- <div class="input-group mb-3">
-   <div class="input-group-prepend">
-     <span class="input-group-text">Fold-change threshold:</span>
-   </div>
-   <input type="text" class="form-control"  aria-label="foldchange" id="foldchange" value="1">
- </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">y axis:</span>
+                    </div>
+                    <input type="text" class="form-control" aria-label="plotyaxis" id="plotyaxis" value='-log<tspan baseline-shift="sub">10</tspan>False Discovery Rate'>
+                </div>
+
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">x axis:</span>
+                    </div>
+                    <input type="text" class="form-control" aria-label="plotxaxis" id="plotxaxis" value='log<tspan baseline-shift="sub">2</tspan>Fold-change'>
+                </div>
+
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">FDR threshold:
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                    </div>
+                    <input type="text" class="form-control" aria-label="fdrthreshold" id="fdrthreshold" value="0.05">
+                </div>
+
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Fold-change threshold:</span>
+                    </div>
+                    <input type="text" class="form-control" aria-label="foldchange" id="foldchange" value="1">
+                </div>
 
 
-<button type="button" class="btn btn-outline-primary" id="apply">apply thresholds</button>
+                <button type="button" class="btn btn-outline-primary" id="apply">Update Plot</button>
 
-</div>
-<div  class="col-sm">&nbsp; </div>
-</div>
+            </div>
+            <div class="col-sm">&nbsp; </div>
+        </div>
 
-<div class="row">
-<div id="chart"></div>
+        <div class="row">
+            <div id="chart"></div>
 
-</div>
+        </div>
 
-<script>
-    var yLabel = '-log<tspan baseline-shift="sub">10</tspan>False Discovery Rate',
-        xLabel = 'log<tspan baseline-shift="sub">2</tspan>Fold-change',
-        file = window.location.href.replace("index.html","") + "/deseq_report.tsv";
+        <script>
+            var yLabel = '-log<tspan baseline-shift="sub">10</tspan>False Discovery Rate', // needs to be variable set according to the workflow this plot is made for
+                xLabel = 'log<tspan baseline-shift="sub">2</tspan>Fold-change',// needs to be variable set according to the workflow this plot is made for
+                file = window.location.href.replace("index.html", "") + "/deseq_report.tsv"; // needs to be variable set according to the workflow this plot is made for
 
-    var volcanoPlot = volcanoPlot()
-        .xAxisLabel(xLabel)
-        .yAxisLabel(yLabel)
-        .foldChangeThreshold(1.0)
-        .sampleID("GeneId")
-        .xColumn("log2FoldChange")
-        .yColumn("padj");
+            var volcanoPlot = volcanoPlot()
+                //.xAxisLabel(xLabel)
+                //.yAxisLabel(yLabel)
+                .foldChangeThreshold(1.0)
+                .sampleID("GeneId")
+                .xColumn("log2FoldChange") // needs to be variable set according to the workflow this plot is made for
+                .yColumn("padj");// needs to be variable set according to the workflow this plot is made for
 
-    d3.tsv(file, parser, function(error, data){
-        if (error) console.log(error);
+            d3.tsv(file, parser, function (error, data) {
+                if (error) console.log(error);
 
-        d3.select('#chart')
-            .data([data])
-            .call(volcanoPlot);
-    });
+                d3.select('#chart')
+                    .data([data])
+                    .call(volcanoPlot);
+            });
 
-    // row parser to convert key values into numbers if possible
-    function parser(d) {
-        for (var key in d) {
-            if (d.hasOwnProperty(key)) {
-                d[key] = numberParser(d[key]);
+            // row parser to convert key values into numbers if possible
+            function parser(d) {
+                for (var key in d) {
+                    if (d.hasOwnProperty(key)) {
+                        d[key] = numberParser(d[key]);
+                    }
+                }
+                return d;
             }
-        }
-        return d;
-    }
 
-    // function to turn string into number if possible
-    function numberParser(value){
-        return (+value) ? +value : value;
-    }
+            // function to turn string into number if possible
+            function numberParser(value) {
+                return (+value) ? +value : value;
+            }
 
-</script>
+        </script>
 
 </body>
+
 </html>
