--- a/volcano_plot/html_data/index.html
+++ b/volcano_plot/html_data/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Zoomable Volcano Plot with Tooltips in D3 v4</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://eligrey.com/demos/FileSaver.js/Blob.js"></script>
+    <script src="https://eligrey.com/demos/FileSaver.js/FileSaver.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -60,6 +62,11 @@
 
                 <button type="button" class="btn btn-outline-primary" id="apply">Update Plot</button>
 
+                <button type="button" class="btn btn-outline-primary" [click]="saveSvg()" id="exportsvg">Save as SVG</button>
+                <button type="button" class="btn btn-outline-primary" id="savesvg">Save as SVG (d3)</button>
+                <button type="button" class="btn btn-outline-primary" id="saveimg">Save as SVG (d3-v2)</button>
+                <button type="button" class="btn btn-outline-primary" id="generate">Save as SVG (d3-v3)</button>
+
             </div>
             <div class="col-sm">&nbsp; </div>
         </div>
@@ -105,6 +112,61 @@
                 return (+value) ? +value : value;
             }
 
+            function saveSvg(){
+                /*
+                //get svg element.
+                var svg = document.getElementById("svg");
+
+                //get svg source.
+                var serializer = new XMLSerializer();
+                var source = serializer.serializeToString(svg);
+
+                //add name spaces.
+                if(!source.match(/^<svg[^>]+xmlns="http\:\/\/www\.w3\.org\/2000\/svg"/)){
+                    source = source.replace(/^<svg/, '<svg xmlns="http://www.w3.org/2000/svg"');
+                }
+                if(!source.match(/^<svg[^>]+"http\:\/\/www\.w3\.org\/1999\/xlink"/)){
+                    source = source.replace(/^<svg/, '<svg xmlns:xlink="http://www.w3.org/1999/xlink"');
+                }
+
+                //add xml declaration
+                source = '<?xml version="1.0" standalone="no"?>\r\n' + source;
+
+                //convert svg source to URI data scheme.
+                var url = "data:image/svg+xml;charset=utf-8,"+encodeURIComponent(source);
+
+                //set url value to a element's href attribute.
+                document.getElementById("link").href = url;
+                //you can download svg file by right click menu.
+                */
+                console.log('1')
+                var svg = document.getElementById("svg");
+                var serializer = new XMLSerializer();
+                var source = serializer.serializeToString(svg);
+                source = source.replace(/(\w+)?:?xlink=/g, 'xmlns:xlink='); // Fix root xlink without namespace
+
+                source = source.replace(/ns\d+:href/g, 'xlink:href'); // Safari NS namespace fix.
+
+
+                if (!source.match(/^<svg[^>]+xmlns="http\:\/\/www\.w3\.org\/2000\/svg"/)) {
+                    source = source.replace(/^<svg/, '<svg xmlns="http://www.w3.org/2000/svg"');
+                }
+                if (!source.match(/^<svg[^>]+"http\:\/\/www\.w3\.org\/1999\/xlink"/)) {
+                    source = source.replace(/^<svg/, '<svg xmlns:xlink="http://www.w3.org/1999/xlink"');
+                }
+
+
+                var preface = '<?xml version="1.0" standalone="no"?>\r\n';
+                var svgBlob = new Blob([preface, source], { type: "image/svg+xml;charset=utf-8" });
+                var svgUrl = URL.createObjectURL(svgBlob);
+                var downloadLink = document.createElement("a");
+                console.log('2')
+                downloadLink.href = svgUrl;
+                downloadLink.download = name;
+                document.body.appendChild(downloadLink);
+                downloadLink.click();
+                document.body.removeChild(downloadLink);
+            }
         </script>
 
 </body>
