--- a/volcano_plot/html_data/index.html
+++ b/volcano_plot/html_data/index.html
@@ -4,15 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Zoomable Volcano Plot with Tooltips in D3 v4</title>
+    <link rel="shortcut icon" href="#"> <!-- prevent "favicon.ico not found" error in console -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <!--
     <script src="https://eligrey.com/demos/FileSaver.js/Blob.js"></script>
-    <script src="https://eligrey.com/demos/FileSaver.js/FileSaver.js"></script>
+    <script src="https://eligrey.com/demos/FileSaver.js/FileSaver.js"></script> -->
+    <script type="text/javascript" src="https://cdn.rawgit.com/eligrey/canvas-toBlob.js/f1a01896135ab378aa5c0118eadd81da55e698d8/canvas-toBlob.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js" ></script>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <script src="index.js"></script>
+    <script src="index.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -37,13 +41,13 @@
                     <input type="text" class="form-control" aria-label="plotyaxis" id="plotyaxis" value='-log<tspan baseline-shift="sub">10</tspan>False Discovery Rate'>
                 </div>
 
-                <div class="input-group mb-3">
+                <div class="input-group mb-5">
                     <div class="input-group-prepend">
                         <span class="input-group-text">x axis:</span>
                     </div>
                     <input type="text" class="form-control" aria-label="plotxaxis" id="plotxaxis" value='log<tspan baseline-shift="sub">2</tspan>Fold-change'>
+                    
                 </div>
-
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <span class="input-group-text">FDR threshold:
@@ -62,10 +66,9 @@
 
                 <button type="button" class="btn btn-outline-primary" id="apply">Update Plot</button>
 
-                <button type="button" class="btn btn-outline-primary" [click]="saveSvg()" id="exportsvg">Save as SVG</button>
-                <button type="button" class="btn btn-outline-primary" id="savesvg">Save as SVG (d3)</button>
-                <button type="button" class="btn btn-outline-primary" id="saveimg">Save as SVG (d3-v2)</button>
-                <button type="button" class="btn btn-outline-primary" id="generate">Save as SVG (d3-v3)</button>
+                <button type="button" class="btn btn-outline-primary" onclick="saveSvg()" id="exportsvg">Save as SVG</button> <!-- broken -->
+                <button type="button" class="btn btn-outline-primary" id="savesvg">Save as SVG (d3)</button> <!-- saves all black-->
+                <button type="button" class="btn btn-outline-primary" id="generate">Save as SVG (d3-v3)</button> <!-- saves correctly but without color-->
 
             </div>
             <div class="col-sm">&nbsp; </div>
@@ -76,7 +79,7 @@
 
         </div>
 
-        <script>
+        <script  type="text/javascript">
             var yLabel = '-log<tspan baseline-shift="sub">10</tspan>False Discovery Rate', // needs to be variable set according to the workflow this plot is made for
                 xLabel = 'log<tspan baseline-shift="sub">2</tspan>Fold-change',// needs to be variable set according to the workflow this plot is made for
                 file = window.location.href.replace("index.html", "") + "/deseq_report.tsv"; // needs to be variable set according to the workflow this plot is made for
@@ -167,6 +170,7 @@
                 downloadLink.click();
                 document.body.removeChild(downloadLink);
             }
+
         </script>
 
 </body>
