--- a/volcano_plot/html_data/index.html
+++ b/volcano_plot/html_data/index.html
@@ -15,9 +15,12 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    -->
+    <!-- tried with beta 4.0.0 instead. didn't fix expandable issue-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    
     <script src="index.js" type="text/javascript"></script>
 </head>
 
@@ -116,6 +119,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="input-group mb-3">
                     <div class="card">
                         <div class="card-header" id="headingOne">
@@ -140,15 +144,15 @@
                     </div>
                 </div>
 
-                <div class="input-group mb-3">
+                <!--<div class="input-group mb-3">-->
                     <div class="card">
                         <div class="card-header">
                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
-                            aria-expanded="false" aria-controls="collapseTwo">
+                            aria-expanded="true" aria-controls="collapseTwo">
                                 Advanced plot options (v3)
                             </button>
                         </div>
-                        <div id="collapseTwo" class="collapse">
+                        <div id="collapseTwo" class="collapse show">
                             <div class="card-body">
                                 <!-- would need two sets of input groups, 1 for each color mode -->
                                 <div class="col-sm-18">
@@ -157,24 +161,37 @@
                                         <div class="input-group-prepend">
                                             <span class="input-group-text">Accepted data point color:</span>
                                         </div>
+                                        <!--<div class="card bg-color">
+                                            <div class="card-body text-center d-flex justify-content-center align-items-center flex-column">
+                                              <p>My background color will be changed</p>
+                                              <button id="color-picker-3" class="btn btn-outline-primary btn-sm">Color Picker</button>
+                                            </div>
+                                          </div>-->
+
+                                        <input type="color" class="form-control" id="rejectedcolor" name="favcolor" value="#ff0000"> <!-- initial value should reflect graph-->
+                                        <!-- <span class="input-group-text colorpicker-input-addon"></span> -->
                                     </div>
 
                                     <div class="input-group mb-3">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text">Accepted data point transparency:</span>
                                         </div>
+                                        <!-- input -->
                                     </div>
 
                                     <div class="input-group mb-3">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text">Rejected data point color:</span>
                                         </div>
+                                        <input type="color" class="form-control" id="rejectedcolor" name="favcolor" value="#ff0000">
+                                        <!-- <span class="input-group-text colorpicker-input-addon"></span> -->
                                     </div>
 
                                     <div class="input-group mb-3">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text">Rejected data point transparency:</span>
                                         </div>
+                                        <!-- input -->
                                     </div>
                                 </div>
 
@@ -185,7 +202,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                <!-- </div> -->
 
                 
 
