--- a/volcano_plot/html_data/index.html
+++ b/volcano_plot/html_data/index.html
@@ -243,18 +243,12 @@
                             <div class="card-body">
                                 <!-- would need two sets of input groups, 1 for each color mode -->
                                 <div class="col-sm-18">
-
+                                   
+                                    <!-- highlight data points (searchable) -->
                                     <div class="input-group mb-3">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text">Enter gene name(s): </span>
                                         </div>
-                                        <!-- input -->
-                                        <input type="text" class="form-control" id="givengenenames" aria-label="give gene names to highlight" value="">
-                                    </div>
-
-                                    <!-- highlight data points (searchable) -->
-                                    <div class="input-group mb-3">
-                                        
                                         <form autocomplete="off"><input class="form-control" type="text" name="q" id="q" onKeyUp="showResults(this.value)" >
                                             <div id="genesearchresult"></div>
                                         </form>
@@ -556,8 +550,10 @@
                 for (i=0; i<geneListToHighlight.length; i++) {
                     list += `<li class="dropdown-item">` + geneListToHighlight[i] + '</li>';
                 }
-                res.innerHTML = '<ul class="list-group">' + list + '</ul>';
-                // if value in list remove, if not add
+                res.innerHTML = '<ul class="list-group" id="highlightlistford3">' + list + '</ul>';
+
+                // update d3
+
             }
 
         </script>
