highlight by gene name (color based) works

--- a/volcano_plot/html_data/index.html
+++ b/volcano_plot/html_data/index.html
@@ -224,6 +224,14 @@
                                         <input type="color" class="form-control" id="rejectedbothcolor"  value="#000000">
                                         <!-- <span class="input-group-text colorpicker-input-addon"></span> -->
                                     </div>
+
+                                    <div class="input-group mb-3">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">Highlighted data point color:</span>
+                                        </div>
+                                        <input type="color" class="form-control" id="highlightcolor"  value="#abcdef">
+                                        <!-- <span class="input-group-text colorpicker-input-addon"></span> -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
