update default file name

--- a/volcano_plot/html_data/index.html
+++ b/volcano_plot/html_data/index.html
@@ -276,7 +276,7 @@
 
         <script type="text/javascript">
             // the 4 variables to be set by a bash script will start on the second line of the first <script> in the htmls body
-            var file = window.location.href.replace("index.html", "") + "/deseq_report.tsv"; 
+            var file = window.location.href.replace("index.html", "") + "/report.tsv"; 
             var xColName = "log2FoldChange";
             var yColName = "padj";
             var dataNameCol = "GeneId";
